clusters/on-prem/core/monitoring/influxdb/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influxdb
  namespace: monitoring
  labels:
    app: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  serviceName: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: influxdb:2.0.6@sha256:44ba18313fca5cceeffe31dcc208b9f4ddf77d0c7b5a54a3aa7cd998f04768a8
        imagePullPolicy: Always
        ports:
        - containerPort: 8086
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/influxdb2
          name: influxdb-volume
      volumes:
      - name: influxdb-volume
        persistentVolumeClaim:
          claimName: influxdb-data-pvc
